@@ -19,6 +19,6 @@ risk_investigation_time = 1
 individual_curves = true
 
 [export]
-mean = false
+mean = true
 quantiles = 0.15
 export_dir = ./
